<resources>
    <string name="app_name">JustTalk</string>
    <string name="google_api_token">499949272101-vmf6l1ib6td62v1g6s1qdpr1q9rqq5dl.apps.googleusercontent.com</string>
    <string name="btn_message_title">Message</string>
    <string name="et_age_hint">My age</string>
    <string name="et_about_me_hint">About me</string>
    <string name="et_speaking_language_hint">Speaking language</string>
    <string name="et_learning_language_hint">Learning language</string>
    <string name="spinner_gender_title">Gender</string>
    <string name="spinner_level_title">Level</string>
    <string name="fragment_people_toolbar_title">People</string>
    <string name="fragment_my_profile_toolbar_title">My profile</string>
    <string name="fragment_edit_profile_toolbar_title">Edit profile</string>
    <string name="snackbar_error_message">Error has occurred</string>
    <string name="snackbar_permission_message">Permission is needed</string>
    <string name="nav_contacts_title">Messages</string>
    <string name="nav_people_title">People</string>
    <string name="nav_profile_title">Profle</string>
    <string name="nav_words_title">Words</string>
    <string name="nav_test_title">Test</string>
    <string name="all_word">Word</string>
    <string name="all_translation">Translation</string>
    <string name="switch_choose_image_text">Choose image automatically</string>
    <string name="all_add">Add</string>
    <string name="all_name">Name</string>
    <string name="all_create">Create</string>
    <string name="message_hint">Type a message</string>
    <string name="btn_start_test_text">Start test</string>
    <string name="swipe_in_msg">Remember</string>
    <string name="swipe_out_msg">Don\'t remember</string>
    <string name="test_res_string">%1$d/%2$d</string>
    <string name="end_test_res_string">You remember %1$d of %2$d words</string>
    <string name="test_is_passed">Test is passed</string>
    <string name="all_delete">Delete</string>
    <string name="all_edit">Edit</string>
    <string-array name="spinner_gender_entities">
        <item>Man</item>
        <item>Woman</item>
    </string-array>
    <string-array name="spinner_level_entities">
        <item>Beginner</item>
        <item>Pre-Intermediate</item>
        <item>Intermediate</item>
        <item>Upper-Intermediate</item>
        <item>Advanced</item>
        <item>Native</item>
    </string-array>
    <string-array name="et_language_entities">
        <item>English</item>
        <item>Russian</item>
    </string-array>
    <string-array name="group_popup_entities">
        <item>Edit</item>
        <item>Delete</item>
    </string-array>
    <string-array name="word_popup_entities">
        <item>Edit</item>
        <item>Delete</item>
    </string-array>
</resources>
