<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <ImageView
            android:id="@+id/iv_user_avatar"
            android:layout_width="0dp"
            android:layout_height="214dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:cropToPadding="true"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.6"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/iv_user_photo_1"
            style="@style/UserPhotoVerticalStyle"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_user_avatar"
            app:layout_constraintTop_toTopOf="@+id/iv_user_avatar"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/iv_user_photo_2"
            style="@style/UserPhotoVerticalStyle"
            android:layout_marginTop="14dp"
            app:layout_constraintEnd_toEndOf="@+id/iv_user_photo_1"
            app:layout_constraintStart_toStartOf="@+id/iv_user_photo_1"
            app:layout_constraintTop_toBottomOf="@+id/iv_user_photo_1"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/iv_user_photo_3"
            style="@style/UserPhotoVerticalStyle"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/iv_user_photo_2"
            app:layout_constraintStart_toStartOf="@+id/iv_user_photo_2"
            app:layout_constraintTop_toBottomOf="@+id/iv_user_photo_2"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/iv_user_photo_4"
            style="@style/UserPhotoHorizontalStyle"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/iv_user_avatar"
            app:layout_constraintTop_toBottomOf="@+id/iv_user_photo_2"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/iv_user_photo_5"
            style="@style/UserPhotoHorizontalStyle"
            android:layout_marginEnd="4dp"
            app:layout_constraintEnd_toStartOf="@+id/iv_user_photo_4"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/iv_user_avatar"
            app:layout_constraintTop_toTopOf="@+id/iv_user_photo_4"
            tools:srcCompat="@tools:sample/avatars" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_age"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_user_photo_5">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_age_hint"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <include
            android:id="@+id/spinner_gender"
            layout="@layout/spinner_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_age" />

        <include
            android:id="@+id/inc_spinner_speaking_level"
            layout="@layout/spinner_speaking_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_speaking_language" />

        <include
            android:id="@+id/inc_spinner_learning_level"
            layout="@layout/spinner_learning_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_learning_language" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_about_me"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_gender">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_about_me"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_about_me_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_speaking_language"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/til_about_me"
            app:layout_constraintStart_toStartOf="@+id/til_about_me"
            app:layout_constraintTop_toBottomOf="@+id/til_about_me">

            <android.widget.AutoCompleteTextView
                android:id="@+id/et_speaking_language"
                style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_speaking_language_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_learning_language"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/til_about_me"
            app:layout_constraintStart_toStartOf="@+id/til_about_me"
            app:layout_constraintTop_toBottomOf="@id/inc_spinner_speaking_level">

            <android.widget.AutoCompleteTextView
                android:id="@+id/et_learning_language"
                style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_learning_language_hint" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
